removed keys and updated readme

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 </html>
 <script src="https://js.pusher.com/4.1/pusher.min.js"></script>
 <script>
-    var pusher = new Pusher('4b34c484eeb9fe4f4142', {
-        cluster: 'mt1',
+    var pusher = new Pusher('XXX-APP-KEY', {
+        cluster: 'XXX-APP-CLUSTER',
         encrypted: true,
         authEndpoint: 'pusher/auth'
     });
