mac video issue removed

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <div id="app">
         <span id="myid"> </span>
-        <video id="selfview"></video>
-        <video id="remoteview"></video>
+        <video id="selfview" autoplay></video>
+        <video id="remoteview" autoplay></video>
         <button id="endCall" style="display: none;" onclick="endCurrentCall()">End Call </button>
         <div id="list">
             <ul id="users">
